--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
   sqflite: ^1.3.0
   image_picker: ^0.6.5+2
   path_provider: ^1.6.7
+  firebase_core: ^0.4.4+2
+  firebase_auth: ^0.15.5+2
+  firebase_storage: ^3.1.3
+  cloud_firestore: ^0.13.4
 
 
 dev_dependencies:
