--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_auth: ^0.15.5+2
   firebase_storage: ^3.1.3
   cloud_firestore: ^0.13.4
+  intl: ^0.16.1
 
 
 dev_dependencies:
