--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -30,6 +30,11 @@ dependencies:
   firebase_storage: ^3.1.3
   cloud_firestore: ^0.13.4
   intl: ^0.16.1
+  carousel_pro: ^1.0.0
+  validadores: ^0.0.1
+  brasil_fields: ^0.3.0
+  flutter_masked_text: ^0.8.0
+  url_launcher: ^5.5.0
 
 
 dev_dependencies:
@@ -66,6 +71,7 @@ flutter:
    - images/gmail.png
    - images/gmail2.jpg
    - images/login_face.png
+   - images/face2.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
