--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   brasil_fields: ^0.3.0
   flutter_masked_text: ^0.8.0
   url_launcher: ^5.5.0
+  cached_network_image: ^2.3.1
 
 
 dev_dependencies:
