--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -22,20 +22,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  image_picker: ^0.6.7+1
-  path_provider: ^1.6.7
-  firebase_core: ^0.4.4+2
-  firebase_auth: ^0.15.5+2
-  firebase_storage: ^3.1.3
-  cloud_firestore: ^0.13.4
-  intl: ^0.16.1
-  carousel_pro: ^1.0.0
-  validadores: ^0.0.1
-  brasil_fields: ^0.3.0
-  flutter_masked_text: ^0.8.0
-  url_launcher: ^5.5.0
-  cached_network_image: ^2.3.1
+  cupertino_icons: ^1.0.2
+  image_picker: ^0.7.3
+  path_provider: ^2.0.1
+  firebase_core: ^1.0.2
+  firebase_auth: ^1.0.1
+  firebase_storage: ^8.0.1
+  cloud_firestore: ^1.0.3
+  intl: ^0.17.0
+  form_field_validator: ^1.1.0
+  brasil_fields: ^1.1.1
+  flutter_masked_text2: ^0.9.1
+  url_launcher: ^6.0.3
 
 
 dev_dependencies:
