--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,18 +22,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  image_picker: ^0.7.3
-  path_provider: ^2.0.1
-  firebase_core: ^1.0.2
-  firebase_auth: ^1.0.1
-  firebase_storage: ^8.0.1
-  cloud_firestore: ^1.0.3
+  cupertino_icons: ^1.0.3
+  image_picker: ^0.7.5+3
+  path_provider: ^2.0.2
+  firebase_core: ^1.2.0
+  firebase_auth: ^1.2.0
+  firebase_storage: ^8.1.0
+  cloud_firestore: ^2.2.0
   intl: ^0.17.0
   form_field_validator: ^1.1.0
-  brasil_fields: ^1.1.1
+  brasil_fields: ^1.1.2
   flutter_masked_text2: ^0.9.1
-  url_launcher: ^6.0.3
+  url_launcher: ^6.0.4
 
 
 dev_dependencies:
